Arrumando link do lkd

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                             <img src="assets/img/img3.jpeg">
                         </div>
                         <div class="media-icons">
-                            <a href="din.com/in/victor-limath/"><i class="fab fa-linkedin"></i></a>
+                            <a href="https://www.linkedin.com/in/victor-limath/" target="_blank"><i class="fab fa-linkedin"></i></a>
                             
                             <a href="https://www.instagram.com/l._monte/" target="_blank"><i class="fab fa-instagram"></i> </a>
                             
